--- a/.dockerignore
+++ b/.dockerignore
@@ -8,4 +8,5 @@ lib/acts_as_xapian/xapiands/development/*
 lib/acts_as_xapian/xapiands/production/*
 lib/themes/fyi-theme
 tmp/*
+vendor/*
 webrat.log
