--- a/.dockerignore
+++ b/.dockerignore
@@ -8,5 +8,5 @@ lib/acts_as_xapian/xapiands/development/*
 lib/acts_as_xapian/xapiands/production/*
 lib/themes/fyi-theme
 tmp/*
-vendor/*
+vendor/bundle
 webrat.log
